Add generics (#17)
* add generics to SipParser

* add generics to DialogInfo

* add generics to OptionTagsHeader

* add generics to InviteDialog

* add generics to Parser

* add generics to SdesRtcpPacket

* add generics to SipURI

* add generics to MediaGw

* add generics to NtpTimeStamp

* add generics to LocationServiceImpl

* add generics to BitStringBuffer

* add generics to SessionBorderController

* add generics to SipMessage

* add generics to StatefulProxy

* add generics to Registrar

* add generics to StringList

* add generics to UserAgentGui

* add generics to UdpMultiRelay

* add generics to ListHeader

* add generics to RecvInfoHeader

* add generics to Redirect

* add generics to RtcpCompoundPacket

* add generics to ReliableProvisionalResponder

* add generics to SdesOfferAnswerModel

* add generics to OutputRegulatedUdpSocket

* add generics to CircularEnumeration

* add generics to AuthenticationServiceImpl

* add generics to AddressResolver

* add generics to AddressResolverKeepAlive

* add generics to AllowEventsHeader

* add generics to CallLoggerImpl

* add generics to Proxy

* add generics to ServerEngine

* add generics to AllowHeader

* add generics to ConnectedSipProvider

* add generics to AuthenticationHeader

* add generics to AuthenticationInfoHeader

* add generics to AuthorizationHeader

* add generics to ProxyAuthorizationHeader

* add generics to WwwAuthenticateHeader

* add generics to ProxyAuthenticateHeader

* add generics to ParametricHeader